style: formatted code

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "run": "node dist/server.js",
     "dev": "ts-node-dev server.ts",
+    "format": "prettier --write .",
     "build": "tsc"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "prettier": "^3.5.3",
     "ts-node-dev": "^2.0.0"
   }
 }
