--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "mxgic1337_",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.1",
-    "express": "^4.21.2"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.17",
     "prettier": "^3.5.3",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
