--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faceit-se-api",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "server.js",
   "repository": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "run": "node dist/server.js",
-    "dev": "ts-node-dev server.ts",
+    "dev": "tsx --watch server.ts",
     "format": "prettier --write .",
     "build": "tsc"
   },
@@ -23,7 +23,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "prettier": "^3.5.3",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3"
   }
 }
